Fix error message overflow

--- a/client/src/assets/stylesheets/LoginForm.css
+++ b/client/src/assets/stylesheets/LoginForm.css
@@ -8,7 +8,9 @@
   height: 100vh;
 }
 
-.login-form-header { 
+/* Header bar styling */
+
+.login.navbar-container { 
   position: relative;
   display: flex;
   flex-direction: row;
@@ -19,7 +21,7 @@
   background: var(--red);
 }
 
-.login-form-header a .logo-wrapper {
+.login.navbar-container a .logo-wrapper {
   position: absolute;
   top: 18px;
   left: 46.5%;
@@ -30,12 +32,12 @@
   width: 100%;
 }
 
-.login-form-header a .logo-wrapper svg {
+.login.navbar-container a .logo-wrapper svg {
   width: 85px;
   height: 30px;
 }
 
-.login-form-header a .logo-wrapper svg text {
+.login.navbar-container a .logo-wrapper svg text {
   font-family: 'helveticaRounded';
   font-size: 24px;
   font-weight: bold;
@@ -49,12 +51,14 @@
   paint-order: stroke fill;
 }
 
-.login-form-header a .logo-wrapper img {
+.login.navbar-container a .logo-wrapper img {
   width: 25px;
   margin: -15px 0 0 -2px;
 }
 
-.login-form-body-container {
+/* Main body styling */
+
+.login.body-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -64,52 +68,69 @@
   padding: 30px 100px;
 }
 
-.login-main-form-container {
+.login.main-form-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
   justify-content: center;
   align-items: center;
   width: 27%;
+  height: 100%;
   text-align: center;
   margin-right: 100px;
 }
 
-.login-main-form-container h1 {
+/* Header styling */
+
+.login.header-container {
+  width: 100%;
+}
+
+/* Header styling */
+
+.login.header-container h1 {
   font-family: 'helveticaBold';
   font-size: 22px;
   color: var(--red);
+  margin-bottom: 10px;
 }
 
-.login-main-form-container p {
+.login.header-container p {
   font-family: 'helveticaBold';
   font-size: 14px;
   color: var(--black);
+  margin-bottom: 10px;
 }
 
-.login-main-form-container p a {
+.login.header-container p a {
   text-decoration: none;
   color: var(--blue);
 }
 
-.login-main-form-container p a:hover {
+.login.header-container p a:hover {
   text-decoration: underline;
 }
 
-.login-main-form-container small {
+.login.header-container small {
   font-family: 'helveticaNormal';
   font-size: 12px;
   color: var(--mid-text);
-  padding: 10px 0 30px 0;
+  margin-bottom: 10px;
 }
 
-.login-main-form-container form {
+/* Form styling */
+
+.login.form-container {
+  width: 100%;
+}
+
+.login.form-container form {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   width: 100%;
 }
 
-.login-main-form-container form input {
+.login.form-container form input {
   font-family: 'helveticaNormal';
   font-size: 14px;
   color: var(--black);
@@ -118,54 +139,52 @@
   width: 100%;
   border-radius: 3px;
   border: 1px solid var(--mid-text);
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
-.login-main-form-container form input:last-of-type {
-  margin-bottom: 40px;
-}
-
-.login-main-form-container button {
-  margin-top: 10px;
+.login.form-container form input:focus {
+  border: 1px solid var(--blue);
 }
 
 .or-separator-wrapper {
   font-family: 'helveticaBold';
   font-size: 14px;
   color: var(--black);
-  padding: 15px 0;
+  padding: 10px 0;
 }
 
-.login-main-form-container button,
-.login-main-form-container form button {
+.login.header-container button,
+.login.form-container form button {
   font-family: 'helveticaBold';
   font-size: 16px;
   background: var(--red);
   color: white;
+  box-sizing: border-box;
   padding: 10px 13px;
   border-radius: 3px;
   width: 100%;
+  margin: 10px 0;
 }
 
-.login-main-form-container button:hover,
-.login-main-form-container form button:hover {
+.login.header-container button:hover,
+.login.form-container form button:hover {
   background: var(--button-hover-red);
   transition: background 0.5s;
   cursor: pointer;
 }
 
-.login-main-form-container form small {
+.login.form-container form small {
   font-family: 'helveticaNormal';
   font-size: 12px;
   color: var(--subtle-text);
 }
 
-.login-main-form-container form small a {
+.login.form-container form small a {
   color: var(--blue);
   text-decoration: none;
 }
 
-.login-main-form-container form small a:hover {
+.login.form-container form small a:hover {
   text-decoration: underline;
   cursor: pointer;
 }
@@ -180,4 +199,72 @@
 
 .login-form-image-container img {
   width: 100%;
+}
+
+/* Input div styling */
+.login.email-input,
+.login.password-input { 
+  position: relative;
+  width: 100%;
+  height: 20%;
+}
+
+/* Errors styling */
+
+.email-error-container,
+.password-error-container {
+  position: absolute;
+  top: 85%;
+  left: 0;
+  z-index: 1;
+}
+
+.error.text-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: white;
+  border: 1px solid var(--black);
+  border-radius: 3px;
+  box-sizing: border-box;
+  padding: 12px 10px;
+  box-shadow: 5px 5px 5px 0.5px rgba(0, 0, 0, 0.2);
+  overflow: visible;
+}
+
+.error.text-wrapper p {
+  white-space: nowrap;
+}
+
+.error-icon-wrapper {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  background: green;
+}
+
+.errors.triangle-wrapper {
+  position: absolute;
+  top: -12px;
+  left: 7%;
+  content: '';
+  width: 0;
+  height: 0;
+  border-bottom: solid 12px var(--black);
+  border-left: solid 12px transparent;
+  border-right: solid 12px transparent;
+  margin-left: 7px;
+}
+
+.errors.inner-triangle-wrapper {
+  position: absolute;
+  top: 1px;
+  left: 7%;
+  content: '';
+  width: 0;
+  height: 0;
+  border-bottom: solid 11px white;
+  border-left: solid 11px transparent;
+  border-right: solid 11px transparent;
+  margin-left: -11px;
 }
